<resources>
    <string name="app_name">易购</string>
    <string name="loading">加载中...</string>
    <string name="now_loading">正在下载...</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="tip_enter_goods_label">请输入商品名</string>
    <string name="tip_app_low_label">法律信息</string>
    <string name="tip_app_c_label">版权信息</string>
    <string name="money_logo">¥</string>
    <string name="xlistview_header_hint_normal">下拉刷新数据</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal">上拉加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="selfowned">自营品牌</string>
    <string name="string_network_dis">亲，网络不给力呐~</string>
    <string name="tip_crash_label">很抱歉，程序遭遇异常，即将退出！</string>
    <string name="click_to_skip">跳过</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="tip_out">再按一次退出程序</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="app_server_label_a">尊敬的用户，易购欢迎您注册成为本网站用户。</string>
    <string name="app_server_label_b">在注册前请您仔细阅读如下服务协议：</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_input_product">请输入商品或品牌</string>
    <string name="search_history">历史搜索</string>
    <string name="cancel">取消</string>
    <string name="please_input_order">请输入订单号/商品码</string>
    <string name="facebook_app_id">341647579628349</string>
    <string name="o_ckqbdd">全部订单</string>
    <string name="o_dsl">待受理</string>
    <string name="o_dfh">待发货</string>
    <string name="o_psz">配送中</string>
    <string name="o_ysh">已收货</string>
    <string name="o_yqx">已取消</string>
    <string name="o_qb">全部</string>
    <string name="o_wddd">我的订单</string>
    <string name="o_ddh">订单号:</string>
    <string name="o_gong">共</string>
    <string name="o_jian">件</string>
    <string name="o_xshjrdfhzt_before">""</string>
    <string name="o_xshjrdfhzt">小时后进入待发货状态</string>
    <string name="o_cjsh">创建时间:</string>
    <string name="money">€</string>
    <string name="o_lxkf">联系客服</string>
    <string name="o_qxdd">取消订单</string>
    <string name="o_xgdd">修改订单</string>
    <string name="o_qrsh">确认收货</string>
    <string name="o_zcgm">再次购买</string>
    <string name="o_qdqx">确定取消</string>
    <string name="o_qxdd_dia_title">取消订单后，本单享有的优惠会一并取消，是否继续？</string>
    <string name="o_qxdd_dia_select_why">请选择取消订单的原因（必选）：</string>
    <string name="o_qxdd_dia_select_why_1">商品买错了（颜色、尺寸、数量有错误）</string>
    <string name="o_qxdd_dia_select_why_2">重复下单/误操作下单</string>
    <string name="o_qx">取消</string>
    <string name="o_tj">提交</string>
    <string name="o_sfqdsdhw">是否确定收到货物？</string>
    <string name="o_qd">确定</string>
    <string name="o_ywc">已完成</string>
    <string name="o_dslxq">待受理详情</string>
    <string name="o_ddzt">订单状态:</string>
    <string name="o_psxx">配送信息</string>
    <string name="o_shr">收货人:</string>
    <string name="o_shouji">手机:</string>
    <string name="o_zuoji">座机:</string>
    <string name="o_shdz">收货地址:</string>
    <string name="o_spqd">商品清单</string>
    <string name="o_dgspqd">订购商品清单</string>
    <string name="o_mjly">买家留言</string>
    <string name="o_ddxx">订单信息</string>
    <string name="o_ddbh">订单编号:</string>
    <string name="o_ddje">订单金额:</string>
    <string name="o_spzs">商品总数:</string>
    <string name="o_spje">商品金额:</string>
    <string name="o_zffs">支付方式:</string>
    <string name="o_khzk">客户折扣:</string>
    <string name="o_zfzk">支付折扣:</string>
    <string name="o_jezk">金额折扣:</string>
    <string name="o_tbzk">特别折扣:</string>
    <string name="o_yf">运费:</string>
    <string name="o_xfze">需付总额:</string>
    <string name="o_yhiva">已含IVA</string>
    <string name="o_bhiva">不含IVA</string>
    <string name="o_sjzkblhsfjeyshszdwz">实际折扣比例和实付金额以收货时账单为准</string>
    <string name="o_dfhxq">待发货详情</string>
    <string name="o_pezxq">配送中详情</string>
    <string name="o_sjzffs">实际支付方式</string>
    <string name="o_sfspqd">实发商品清单</string>
    <string name="o_ywcxq">已完成详情</string>
    <string name="o_sfze">实付总额</string>
    <string name="o_yqxxq">已取消详情</string>
    <string name="o_dj">单价:</string>
    <string name="o_xj">小计:</string>
    <string name="g_pl">批量</string>
    <string name="g_zh">综合</string>
    <string name="g_xl">销量</string>
    <string name="g_xp">新品</string>
    <string name="g_sx">筛选</string>
    <string name="g_kc">库存</string>
    <string name="g_jrgwc">加入购物车</string>
    <string name="g_qsrspxx">请输入商品或品牌</string>
    <string name="g_qx">取消</string>
    <string name="g_lsss">历史搜索</string>
    <string name="g_fh">返回</string>
    <string name="g_ssjgwk">搜索结果为空</string>
    <string name="g_jg">价格</string>
    <string name="g_zdj">最低价</string>
    <string name="g_zgj">最高价</string>
    <string name="g_pp">品牌</string>
    <string name="g_cz">重置</string>
    <string name="g_wc">完成</string>
    <string name="g_spxq">商品\n详情</string>
    <string name="g_sc">收藏</string>
    <string name="g_yxl">月销量:</string>
    <string name="s_ddtj">订单提交</string>
    <string name="s_ddtjcg">订单订单提交成功！</string>
    <string name="s_4xsnkyxg">（4小时内可以修改）</string>
    <string name="s_kfryhz24xsnynlx">客服人员会在24小时内与您联系</string>
    <string name="s_zzddsl">正在等待受理。。。。</string>
    <string name="s_shr">收货人:</string>
    <string name="s_shouji">手机</string>
    <string name="s_shdz">收货地址:</string>
    <string name="s_ddbh">订单编号:</string>
    <string name="s_zffs">支付方式:</string>
    <string name="s_sfje">实付金额:</string>
    <string name="s_ddxq">订单详情</string>
    <string name="s_jxgg">继续逛逛</string>
    <string name="qsrddh">请输入订单号/商品条码</string>
    <string name="messdxgjg">没有搜索到相关结果，换个词试试吧！</string>
    <string name="title_setting">设置</string>
    <string name="out_des">确定退出登录</string>
    <string name="ok">确认</string>
    <string name="no">no</string>
    <string name="中文" />
    <string name="English" />
    <string name="Español" />
    <string name="Italiano" />
    <string name="Français" />
    <string name="select_yuyen_title">.</string>
    <string name="Clear_cache_loading">清除缓存</string>
    <string name="Clear_success">清理完成</string>
    <string name="newversion">a</string>
    <string name="haode">a</string>
    <string name="with_me">2</string>
    <string name="tip_app_low">a</string>
    <string name="tip_app_c">a</string>
    <string name="is_delet">s</string>
    <string name="system_message_title">s</string>
    <string name="message_detail_title">s</string>
    <string name="service_title">s</string>
    <string name="Exclusive_customer">专属客服</string>
    <string name="gr_phone">s</string>
    <string name="gr_phone_des">个人电话：7*24小时在线</string>
    <string name="gs_phone">s</string>
    <string name="zx_time">在线时间</string>
    <string name="zhouyi_zhouwu">s</string>
    <string name="adress_title">我的地址</string>
    <string name="setting_normal">设为默认地址</string>
    <string name="conmit">s</string>
    <string name="delet">删除</string>
    <string name="add_adress">添加新地址</string>
    <string name="no_adress">s</string>
    <string name="my_connection">s</string>
    <string name="kc">s</string>
    <string name="xiajia">该商品已下架</string>
    <string name="user_info">个人信息</string>
    <string name="user_img">s</string>
    <string name="user_name">s</string>
    <string name="user_sex">保密</string>
    <string name="user_birthday">s</string>
    <string name="user_signa">s</string>
    <string name="phone">s</string>
    <string name="call">座机</string>
    <string name="weixin">s</string>
    <string name="twitter">s</string>
    <string name="facebook">Facebook</string>
    <string name="user_info_bottom_text">s</string>
    <string name="goto_bind">去绑定</string>
    <string name="nan">s</string>
    <string name="nv">s</string>
    <string name="zx">s</string>
    <string name="select_xc">s</string>
    <string name="wc">完成</string>
    <string name="qsrsjh">s</string>
    <string name="code_des">请输入验证码</string>
    <string name="put_password">请输入密码</string>
    <string name="get_code">获取验证码</string>
    <string name="password_des">6~18位字母、数字或特殊符号组合，不区分大小写</string>
    <string name="zhaohui_password">找回密码</string>
    <string name="ps_photo">查看并编辑个人资料</string>
    <string name="ps_dpdz">店铺地址</string>
    <string name="ps_wdsc">我的收藏</string>
    <string name="ps_xtxx">系统信息</string>
    <string name="ps_ffrx">服务热线</string>
    <string name="settings">设置</string>
    <string name="select_yuyan">语言选择</string>
    <string name="userinfo_zc">新用户注册</string>
    <string name="wj_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="dj_dl">点此登录</string>
    <string name="zc_guo">已经注册过易购，</string>
    <string name="wydg">我已阅读并同意</string>
    <string name="app_server">《易购服务协议》</string>
    <string name="js">结算</string>
    <string name="iva">（已含IVA）</string>
    <string name="shop_title">购物车</string>
    <string name="sc">移到收藏夹</string>
    <string name="qx">全选</string>
    <string name="jx">继续选购</string>
    <string name="dj">单价：</string>
    <string name="xj">小计：</string>
    <string name="order_title">确认订单</string>
    <string name="shxx">收货信息</string>
    <string name="u_shxx">尚未填写收货信息</string>
    <string name="shr">收货人：</string>
    <string name="zffs">支付方式</string>
    <string name="khzk">客户折扣</string>
    <string name="zkzf">支付折扣：</string>
    <string name="jezk">金额折扣：</string>
    <string name="yf">运费</string>
    <string name="ppxj">品牌小计：</string>
    <string name="mjly">买家留言（选填）:</string>
    <string name="zxf">需付总额：</string>
    <string name="order_des">实际折扣比例和实付金额以收货时账单为准</string>
    <string name="tjdd">提交订单</string>
    <string name="xing">姓</string>
    <string name="ming">名</string>
    <string name="sex">性别</string>
    <string name="dz_des1">请输入姓氏</string>
    <string name="dz_des2">请输入名字</string>
    <string name="dz_des3">请输入手机号码</string>
    <string name="dz_des4">请输入座机号码</string>
    <string name="sdmc">商店名称</string>
    <string name="gsmc">公司名称</string>
    <string name="gj">国家</string>
    <string name="zs">省、州</string>
    <string name="city">城市</string>
    <string name="sh_xxdz">详细地址（送货）</string>
    <string name="fp_xxdz">详细地址（发票）</string>
    <string name="yb">邮编</string>
    <string name="qsr">请输入</string>
    <string name="qxz">请选择</string>
    <string name="dpxz">店铺类型</string>
    <string name="jylx">经营类型</string>
    <string name="fp">发票</string>
    <string name="sh">税号</string>
    <string name="jysj">营业时间</string>
    <string name="shsj">送货时间</string>
    <string name="dmj">店面积</string>
    <string name="mbkh">目标客户</string>
    <string name="wj">旺季</string>
    <string name="danji">淡季</string>
    <string name="zysp">主营商品</string>
    <string name="bzsm">备注说明</string>
    <string name="upda_image">上传图片</string>
    <string name="upda_image_des">(建议尺寸XXX.XXX，支持格式：JPG、PNG、GIF)</string>
    <string name="save">保存</string>
    <string name="qtyj">全天有节假日</string>
    <string name="qtwj">无节假日</string>
    <string name="gth">个体户</string>
    <string name="ungth">非个体户</string>
    <string name="bdk">本地客为主</string>
    <string name="bdz_ykf">本地客为主，游客为辅</string>
    <string name="ykz_bdf">游客客为主，本地客为辅</string>
    <string name="ykz">游客为主</string>
    <string name="yuefen">月份</string>
    <string name="tip_app_jianjie_label">易购商城是深圳纳海科技旗下产品，成立于2017年12月1日。依托其在欧洲丰富的终端渠道和在中国强大的供应链资源，以及在欧洲本土自建的地面运维团队和雄厚的技术研发实力、创新的业务模式，服务欧洲十余万家中小门店。致力于解决传统跨境贸易中存在的渠道层级多、流程手续繁、成本费用高、价格管理乱、假货杜绝难等问题。并为品牌厂商及中小门店提供专业的终端服务和数据支持，助力品牌厂商打造透明可控、精准高效的销售渠道，帮助中小门店降低商品成本，提升周转率，最终打造一个健康的跨境供销平台。</string>
</resources>