<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="26dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/o_qrsh"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/o_sfqdsdhw"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_size"/>

    <View
        style="@style/horizontal_small_line"
        android:layout_marginLeft="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/o_qx"
            android:textColor="@color/order_light_grey"
            android:textSize="@dimen/text_size"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/act_line"/>

        <TextView
            android:id="@+id/tv_commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/o_tj"
            android:textColor="@color/text_title"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</LinearLayout>
